Revert "deleted nixpacks, using Docker file, and change image in index.html"
This reverts commit f4caa081a88d02d6a193580f237abdcd12cbedec.

--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -42,7 +42,7 @@
         <div class="card h-100 border-0 shadow-sm">
           <div class="img-hover-zoom">
             <img
-              src="{% static '/images/primary_school.png' %}"
+              src="{% static 'images/istockphoto-1480246301-612x612.jpg' %}"
               class="card-img-top"
               alt="Primary School"
             />
